# interfaces/models/__init__.py
@@ -32,6 +32,8 @@ from interfaces.models.contracts import (
     ReportSummary,
     RunDetail,
     RunEventView,
+    RunEventsApiResponse,
+    RunEventsData,
     RunListItem,
     RunMarkBlockedResolvedRequest,
     RunOperationRequest,
@@ -86,6 +88,8 @@ __all__ = [
     "ReportSummary",
     "RunDetail",
     "RunEventView",
+    "RunEventsApiResponse",
+    "RunEventsData",
     "RunListItem",
     "RunMarkBlockedResolvedRequest",
     "RunOperationRequest",
